--- a/src/app/people/person-list/person-list.component.html
+++ b/src/app/people/person-list/person-list.component.html
@@ -9,7 +9,8 @@
     </div>
     <div class="col-xs-12 col-md-3 sidebar">
       <a href="#"
-         class="btn btn-success sidebar-cta disabled">
+         class="btn btn-success sidebar-cta"
+         routerLink="/people/add">
         Add someone
       </a>
     </div>
