Send new friend to back end and redirect user to list

--- a/src/app/people/person-form/person-form.component.html
+++ b/src/app/people/person-form/person-form.component.html
@@ -44,7 +44,8 @@
 
     <button type="submit"
             [disabled]="addNewPersonForm.invalid"
-            class="btn btn-success">
+            class="btn btn-success"
+            (click)="onSubmit()">
       Submit
     </button>
   </form>
